--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -11,7 +11,8 @@
 
 <body>
   <h1>Hello world from ejs</h1>
-  <img src="/image/background-ironman.png" alt="">
+  <%= dataUser %>
+    <img src="/image/background-ironman.png" alt="">
 </body>
 
 </html>
