router params & users details page

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -52,6 +52,11 @@
             <% } %>
         </tbody>
       </table>
+      <div>
+        <p>Powered and Designed by
+          <a href="/about">Quyen</a>
+        </p>
+      </div>
     </div>
   </div>
 </body>
