using form & post request with nodejs

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -52,12 +52,36 @@
             <% } %>
         </tbody>
       </table>
-      <div>
-        <p>Powered and Designed by
-          <a href="/about">Quyen</a>
-        </p>
-      </div>
     </div>
+    <div class="create-user-container">
+      <form action="/create-new-user" method="POST">
+        <div><b>Create a new user:</b></div>
+        <div>
+          <label>FirstName:</label>
+          <input type="text" name="firstName">
+        </div>
+        <div>
+          <label>LastName:</label>
+          <input type="text" name="lastName">
+        </div>
+        <div>
+          <label>Email:</label>
+          <input type="email" name="email">
+        </div>
+        <div>
+          <label>Address:</label>
+          <input type="text" name="address">
+        </div>
+        <div>
+          <button type="submit" class="btn-submit">Submit</button>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div>
+    <p>Powered and Designed by
+      <a href="/about">Quyen</a>
+    </p>
   </div>
 </body>
 
