--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -67,3 +67,17 @@ body {
 .dropdown:hover .dropbtn {
   background-color: #3e8e41;
 }
+
+.create-user-container {
+  padding: 15px;
+  text-align: center;
+}
+
+.create-user-container label {
+  display: block;
+}
+
+.create-user-container .btn-submit {
+  margin-top: 15px;
+  cursor: pointer;
+}
